--- a/kafka-full/kafka-deployment.yml
+++ b/kafka-full/kafka-deployment.yml
@@ -9,47 +9,55 @@ spec:
   selector:
     matchLabels:
       service: kafka
-  strategy:
-    type: Recreate
+  strategy: {}
   template:
     metadata:
       labels:
         network/kafka-network: "true"
         service: kafka
     spec:
-      enableServiceLinks: false
       containers:
-      - name: kafka
-        imagePullPolicy: IfNotPresent
-        image: confluentinc/cp-kafka:7.0.1
-        ports:
-          - containerPort: 29092
-          - containerPort: 9092
-        env:
-          - name: CONFLUENT_SUPPORT_CUSTOMER_ID
-            value: "anonymous"
-          - name: KAFKA_ADVERTISED_LISTENERS
-            value: "INTERNAL://kafka:29092,LISTENER_EXTERNAL://kafka:9092"
-          - name: KAFKA_AUTO_CREATE_TOPICS_ENABLE
-            value: "true"
-          - name: KAFKA_BROKER_ID
-            value: "1"
-          - name: KAFKA_DEFAULT_REPLICATION_FACTOR
-            value: "1"
-          - name: KAFKA_INTER_BROKER_LISTENER_NAME
-            value: "INTERNAL"
-          - name: KAFKA_LISTENERS
-            value: "INTERNAL://:29092,LISTENER_EXTERNAL://:9092"
-          - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
-            value: "INTERNAL:PLAINTEXT,LISTENER_EXTERNAL:PLAINTEXT"
-          - name: KAFKA_NUM_PARTITIONS
-            value: "1"
-          - name: KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR
-            value: "1"
-          - name: KAFKA_LOG_CLEANUP_POLICY
-            value: "compact"
-          - name: KAFKA_ZOOKEEPER_CONNECT
-            value: "zookeeper:2181"
-        resources: {}
+        - env:
+            - name: KAFKA
+            - name: KAFKA_ZOOKEEPER_CONNECT
+              value: "zookeeper:2181"
+            - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
+              value: "PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT"
+            - name: KAFKA_ADVERTISED_LISTENERS
+              value: "PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092"
+            - name: KAFKA_METRIC_REPORTERS
+              value: "io.confluent.metrics.reporter.ConfluentMetricsReporter"
+            - name: KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR
+              value: "1"
+            - name: KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS
+              value: "0"
+            - name: KAFKA_CONFLUENT_LICENSE_TOPIC_REPLICATION_FACTOR
+              value: "1"
+            - name: KAFKA_CONFLUENT_BALANCER_TOPIC_REPLICATION_FACTOR
+              value: "1"
+            - name: KAFKA_TRANSACTION_STATE_LOG_MIN_ISR
+              value: "1"
+            - name: KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR
+              value: "1"
+            - name: KAFKA_JMX_PORT
+              value: "9101"
+            - name: KAFKA_JMX_HOSTNAME
+              value: "localhost"
+            - name: KAFKA_CONFLUENT_SCHEMA_REGISTRY_URL
+              value: "http://schema-registry:8081"
+            - name: CONFLUENT_METRICS_REPORTER_BOOTSTRAP_SERVERS
+              value: "kafka:29092"
+            - name: CONFLUENT_METRICS_REPORTER_TOPIC_REPLICAS
+              value: "1"
+            - name: CONFLUENT_METRICS_ENABLE
+              value: "true"
+            - name: CONFLUENT_SUPPORT_CUSTOMER_ID
+              value: "anonymous"
+          image: confluentinc/cp-server:7.3.1
+          name: kafka
+          ports:
+            - containerPort: 9092
+            - containerPort: 9101
+          resources: {}
       hostname: kafka
       restartPolicy: Always
